# cube

./: CODEOWNERS  README.md  README_Prometheus.md  format.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-report.md  feature_request.md
cube3d/: cube3d.ipynb  generate.py  vq_vae_encode_decode.py
cube3d/inference/: engine.py  logits_postprocesses.py  utils.py
cube3d/model/autoencoder/: one_d_autoencoder.py  spherical_vq.py
cube3d/renderer/: blender_script.py
cubepart/: .gitattributes  CODEOWNERS  README.md  pyproject.toml  requirements.txt  requirements_rocm.txt
cubepart/cube_part/models/autoencoders/: one_d_grid_autoencoder.py  utils.py
cubepart/cube_part/models/denoisers/: hijack_qwenimage_multi.py  utils.py
cubepart/cube_part/models/transformers/: gated_attention.py  norm.py
cubepart/cube_part/pipelines/: shape_denoiser.py
cubepart/cube_part/systems/: shape_denoiser.py
cubepart/cube_part/utils/: config.py  grid.py  mesh.py
cubepart/examples/: gradio_demo.py  run_inference.py
cubepart/examples/inputs/: drone.glb  flower.glb  jellyfish_car.glb  pirate_chest.glb  wizard.glb
